--- a/RestAPIApp/RestAPIApp/Views/Base/Base.lproj/Main.storyboard
+++ b/RestAPIApp/RestAPIApp/Views/Base/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="2Wh-oJ-rm7">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="09C-fC-AjF">
                             <size key="itemSize" width="340" height="188"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -47,6 +47,11 @@
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" red="0.136136321" green="0.3815314883" blue="0.95725722540000002" alpha="0.83377408669999997" colorSpace="calibratedRGB"/>
                                 <size key="customSize" width="340" height="188"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="infoLbl" destination="G5T-fw-eoX" id="ZZ1-Lr-V2H"/>
                                 </connections>
@@ -280,12 +285,15 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="abY-ce-q4w">
-                                <rect key="frame" x="50" y="525.66666666666663" width="328" height="136"/>
+                                <rect key="frame" x="50" y="525.66666666666663" width="328" height="220"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tr2-ie-t0B">
-                                        <rect key="frame" x="0.0" y="0.0" width="328" height="32"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="328" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="0Ec-FL-SFx"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Posts">
+                                        <buttonConfiguration key="configuration" style="tinted" title="Posts">
                                             <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
                                         </buttonConfiguration>
                                         <connections>
@@ -293,9 +301,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fPd-xm-s1z">
-                                        <rect key="frame" x="0.0" y="52" width="328" height="32"/>
+                                        <rect key="frame" x="0.0" y="80" width="328" height="60"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Alboms">
+                                        <buttonConfiguration key="configuration" style="tinted" title="Albums">
                                             <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
                                         </buttonConfiguration>
                                         <connections>
@@ -303,9 +311,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgD-Hf-URm">
-                                        <rect key="frame" x="0.0" y="104" width="328" height="32"/>
+                                        <rect key="frame" x="0.0" y="160" width="328" height="60"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Todo-s">
+                                        <buttonConfiguration key="configuration" style="tinted" title="Todo-s">
                                             <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
                                         </buttonConfiguration>
                                         <connections>
@@ -376,7 +384,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="âPngtreeâdefault avatar photo_5939510" translatesAutoresizingMaskIntoConstraints="NO" id="cOh-JK-exD">
-                                <rect key="frame" x="20" y="108" width="388" height="764"/>
+                                <rect key="frame" x="0.0" y="108" width="428" height="764"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="hak-1j-zvo">
                                 <rect key="frame" x="195.66666666666666" y="471.66666666666669" width="37" height="37"/>
@@ -387,9 +400,9 @@
                         <constraints>
                             <constraint firstItem="cOh-JK-exD" firstAttribute="top" secondItem="E1v-aJ-jhw" secondAttribute="top" constant="20" id="84q-Gz-0jG"/>
                             <constraint firstItem="hak-1j-zvo" firstAttribute="centerY" secondItem="cOh-JK-exD" secondAttribute="centerY" id="HHR-jm-3eG"/>
-                            <constraint firstItem="cOh-JK-exD" firstAttribute="leading" secondItem="E1v-aJ-jhw" secondAttribute="leading" constant="20" id="IXg-pJ-2oj"/>
+                            <constraint firstItem="cOh-JK-exD" firstAttribute="leading" secondItem="E1v-aJ-jhw" secondAttribute="leading" id="IXg-pJ-2oj"/>
                             <constraint firstItem="hak-1j-zvo" firstAttribute="centerX" secondItem="cOh-JK-exD" secondAttribute="centerX" id="XSy-3n-ZBT"/>
-                            <constraint firstItem="E1v-aJ-jhw" firstAttribute="trailing" secondItem="cOh-JK-exD" secondAttribute="trailing" constant="20" id="uWR-Jv-BSe"/>
+                            <constraint firstItem="E1v-aJ-jhw" firstAttribute="trailing" secondItem="cOh-JK-exD" secondAttribute="trailing" id="uWR-Jv-BSe"/>
                             <constraint firstItem="E1v-aJ-jhw" firstAttribute="bottom" secondItem="cOh-JK-exD" secondAttribute="bottom" constant="20" id="vFB-LQ-ufE"/>
                         </constraints>
                     </view>
@@ -425,6 +438,9 @@
     </scenes>
     <resources>
         <image name="âPngtreeâdefault avatar photo_5939510" width="3000" height="3000"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
